make options page control minimum links

--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -4,6 +4,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="popup"></div>
+    <div id="popup" class="redditPurple"></div>
 </body>
 </html>
