--- a/extension/src/options.html
+++ b/extension/src/options.html
@@ -4,6 +4,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="options"></div>
+    <div id="options" class="redditPurple"></div>
 </body>
 </html>
